using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class BulletType : ScriptableObject
{
    public enum BulletTypes
    {
        NormalBullet,
        LaserBullet,
        DiffusionBullet
    }
}
