using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public interface IBulletBase
{
    string Name { get; }
    GameObject prefab { get; set; }
    int Attack { get; set; }
}