using ShootingGame.Scripts.Damage;

public interface IDamageApplicable
{
    void ApplyDamage(in Damage damage);
}