using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public interface IShot 
{
    void Shot(IBulletBase bullet,PlayerModel player);
}
