@startuml
class MonoBehaviour



namespace Player {
PlayerModel -->PlayerShotManagement
PlayerModel --> Enemy.EnemyCore
PlayerPresenter --> PlayerModel
PlayerPresenter --> PlayerView
PlayerPresenter --> UI.UIView
PlayerShotManagement ..> Shot.IShot
PlayerShotManagement --> Shot.NormalShot
PlayerShotManagement --> Shot.LaserShot
PlayerShotManagement --> Shot.DiffusionShot
PlayerShotManagement --> Bullet.BulletFactory
PlayerShotManagement ..> Bullet.IBulletBase
PlayerShotManagement --> Bullet.BulletType
PlayerShotManagement --> Shot.ShotType
PlayerPresenter --> Manager.InputEventProvider

class PlayerModel
class PlayerPresenter
class PlayerShotManagement
class PlayerView
}
namespace Manager{
EnemyManager --> "many" Enemy.EnemyCore
EnemyManager --> Enemy.EnemyFactory
GeneralManager --> EnemyManager
GeneralManager --> Player.PlayerModel
GeneralManager --> UIView
SelfDestroy --> Damage.Damage
SelfDestroy ..> Damage.IDamageApplicable


class InputEventProvider
class EnemyManager
class GeneralManager
class SelfDestroy 
class ShootingGameInstallManager
}

namespace Enemy{
EnemyCore ..|> Damage.IDamageApplicable
EnemyCore --> Damage.Damage
EnemyPresenter --> EnemyCore
EnemyPresenter -->UI.UIView
WeakEnemy ..|> IEnemyBehaviourBase
NormalEnemy ..|> IEnemyBehaviourBase
StrongEnemy ..|> IEnemyBehaviourBase
EnemyFactory ..|> IEnemyFactory
IEnemyFactory ..> IEnemyBehaviourBase
EnemyFactory --> NormalEnemy
EnemyFactory --> WeakEnemy
EnemyFactory --> StrongEnemy
NormalEnemy --|> EnemyCore
WeakEnemy --|> EnemyCore
StrongEnemy --|> EnemyCore

class EnemyCore
class EnemyPresenter
interface IEnemyBehaviourBase
interface IEnemyFactory
class WeakEnemy
class NormalEnemy
class StrongEnemy
class EnemyFactory
}

namespace Shot{
class DiffusionShot
interface IShot
class LaserShot
class NormalShot
enum ShotType
}

namespace Bullet{
BulletDecorator ..|> IBulletBase
BulletDecorator ..> IBulletBase
BulletFactory ..|> IFactoryBase
BulletFactory --> NormalBullet
BulletFactory --> LaserBullet
BulletFactory --> DiffusionBullet
BulletFactory --> BulletType
BulletFactory ..> IBulletBase
DiffusionBullet --|> BulletDecorator
DiffusionBullet ..> IBulletBase
IFactoryBase -->BulletType
LaserBullet --|> BulletDecorator
LaserBullet ..> IBulletBase
NormalBullet ..|> IBulletBase


class BulletDecorator
class BulletFactory
enum BulletType
class DiffusionBullet
interface IBulletBase
interface IFactoryBase
class LaserBullet
class NormalBullet
}

namespace UI{
class UIView
}

namespace Damage{
IDamageApplicable -->Damage

class Damage 
interface IDamageApplicable
}
@enduml